--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-numpy
-pandas
-matplotlib
-seaborn
-datetime
-locale
-holidays_co
-joblib
-statsmodels
+fastapi==0.88.0
+holidays_co==1.0.0
+joblib==1.1.1
+matplotlib==3.6.2
+numpy==1.21.5
+pandas==1.3.5
+plotly==5.9.0
+pydantic==1.10.2
+requests==2.28.1
+seaborn==0.12.1
+streamlit==1.15.2
