Actualización de los archivos de la aplicación y creacion de un Jupyter Notebook para el modelo de Prophet

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,16 +4,13 @@
 primaryColor = '#7792E3'
 
 # Background color for the main content area
-backgroundColor = '#001a42'
+backgroundColor = '#e9ebeb'
 
 # Background color for sidebar only
-secondaryBackgroundColor = '#24732d'
+secondaryBackgroundColor = '#6193C6'
 
 # Color used for almost all text
-textColor = '#FFFFFF'
-
-# Background color for widgets and code blocks
-codeBackgroundColor = '#FFFFFF'
+textColor = '#000000'
 
 # Font family for all text in the app, except code blocks
 # Accepted values (serif | sans serif | monospace) 
